# Jukebox_IUT

./: README.md
Jukebox_IUT/: CMakeLists.txt  Jukebox_IUT_en_US.ts  main.cpp  vcpkg.json
Jukebox_IUT/resources/: resources.qrc  style.qss
Jukebox_IUT/src/backend/: libraryManager.cpp  libraryManager.h  networkmanager.cpp  networkmanager.h  player.cpp  player.h  playlist.h  playlistManager.cpp  playlistManager.h  queueManager.cpp  queueManager.h  song.cpp  song.h
Jukebox_IUT/src/frontend/: addtoplaylist.cpp  addtoplaylist.h  addtoplaylist.ui  addtoplaylistdialog.cpp  addtoplaylistdialog.h  addtoplaylistdialog.ui  controls.cpp  controls.h  controls.ui  createplaylistdialog.cpp  createplaylistdialog.h  createplaylistdialog.ui  createserverdialog.cpp  createserverdialog.h  createserverdialog.ui  editor.cpp  editor.h  editor.ui  editorsong.cpp  editorsong.h  editorsong.ui  fakevisualizerwidget.cpp  fakevisualizerwidget.h  joinpartydialog.cpp  joinpartydialog.h  joinpartydialog.ui  library.cpp  library.h  library.ui  librarysong.cpp  librarysong.h  librarysong.ui  logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  partydialog.cpp  partydialog.h  (+24 more)
